feat: implement full localization for light mode changes and fix hardcoded strings

--- a/app/locales/de.json5
+++ b/app/locales/de.json5
@@ -22,9 +22,40 @@
       full_account_reset_confirm_button: 'ALLE DATEN LÖSCHEN',
       full_account_reset_cancel_button: 'Abbrechen',
     },
+    toggle_drawer: 'Menü-Drawer umschalten',
+    loading_data: 'Tarkov-Daten werden geladen',
+    error_loading: 'Fehler beim Laden der Tarkov-Daten',
+    themes: {
+      system: 'Zu System-Theme wechseln',
+      light: 'Zu hellem Modus wechseln',
+      dark: 'Zu dunklem Modus wechseln',
+    },
   },
   common: {
     refreshbutton: 'Erneut versuchen',
+    hide: 'Ausblenden',
+    show: 'Anzeigen',
+    copied: 'Kopiert!',
+    copy: 'Kopieren',
+    toggle_collected: 'Gesammelt umschalten',
+  },
+  loading: {
+    title: 'Tarkov Tracker wird geladen',
+    title_error: 'Fehler beim Laden',
+    subtitle: 'Erforderliche Spieldaten werden heruntergeladen...',
+    subtitle_error: 'Einige Daten konnten nicht geladen werden',
+    tasks_maps_traders: 'Aufgaben, Karten & Händler',
+    hideout_stations: 'Versteckstationen',
+    prestige_data: 'Prestige-Daten',
+    game_editions: 'Spieleditionen',
+    first_load_note: 'Dies kann beim ersten Laden einen Moment dauern. Die Daten werden für zukünftige Besuche zwischengespeichert.',
+    partial_data_note: 'Die App kann weiterhin mit unvollständigen Daten arbeiten. Du kannst es erneut versuchen oder trotzdem fortfahren.',
+    retry: 'Wiederholen',
+    continue: 'Trotzdem fortfahren',
+  },
+  holiday: {
+    enable: 'Feiertagseffekte aktivieren',
+    disable: 'Feiertagseffekte deaktivieren',
   },
   menu: {
     language: 'Sprache',
@@ -172,11 +203,12 @@
         increase: 'Erhöhen',
         complete: 'Abschließen',
         markComplete: 'Als abgeschlossen markieren',
-        uncomplete: 'Nicht abgeschlossen',
+        incomplete: 'Unvollständig',
         item: 'Gegenstand',
         completebutton: 'Abgeschlossen',
+        unlockbutton: 'Freischalten',
+        incompletebutton: 'Unvollständig',
         availablebutton: 'Als verfügbar markieren',
-        uncompletebutton: 'Als unvollständig markieren',
         statuscomplete: '{name} als abgeschlossen markiert',
         statusuncomplete: '{name} als unvollständig markiert',
         statusavailable: 'Alle Voraussetzungen für {name} als abgeschlossen markiert',
@@ -205,6 +237,7 @@
         unlocksPurchase: 'Schaltet Kauf frei',
         traderRep: '+{standing} {trader}',
         skillReward: '+{level} {skill}',
+        min_level_required: 'Mindestlevel für Aufgabenzugriff',
       },
     },
     traders: {
@@ -268,6 +301,18 @@
         hideout: 'Versteck',
       },
       neededby: 'Benötigt von: {users}',
+      collect: 'Sammeln',
+      uncollect: 'Sammeln rückgängig',
+      collected: 'Gesammelt',
+      mark_as_collected: 'Als gesammelt markieren',
+      decrease_count: 'Anzahl verringern',
+      increase_count: 'Anzahl erhöhen',
+      click_to_enter_value: 'Klicken, um Wert einzugeben',
+      mark_as_incomplete: 'Als unvollständig markieren',
+      mark_as_complete_100: 'Als 100% abgeschlossen markieren',
+      fir_required: 'Im Raid gefunden erforderlich',
+      lvl_required: 'Lvl {level}',
+      locked_before: '{count} davor',
       options: {
         title: 'Optionen für benötigte Gegenstände',
         close: 'Schließen',
@@ -579,9 +624,14 @@
       set_total_xp: 'Gesamt-XP festlegen',
       manual_hint: 'Gib deine tatsächliche Gesamt-XP ein, um den Offset automatisch anzupassen.',
       reset_offset: 'XP-Offset zurücksetzen',
+      copy_account_id: 'Account-ID kopieren',
     },
     danger_zone: {
       title: 'Gefahrenzone',
+    },
+    skills: {
+      required_for: 'Benötigt für: {tasks}',
+      required_levels: 'Benötigte Level: {levels}',
     },
   },
   generic: {
