--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -22,9 +22,40 @@
       full_account_reset_confirm_button: 'DELETE ALL DATA',
       full_account_reset_cancel_button: 'Cancel',
     },
+    toggle_drawer: 'Toggle Menu Drawer',
+    loading_data: 'Loading Tarkov Data',
+    error_loading: 'Error Loading Tarkov Data',
+    themes: {
+      system: 'Switch to System Theme',
+      light: 'Switch to Light Mode',
+      dark: 'Switch to Dark Mode',
+    },
   },
   common: {
     refreshbutton: 'Try again',
+    hide: 'Hide',
+    show: 'Show',
+    copied: 'Copied!',
+    copy: 'Copy',
+    toggle_collected: 'Toggle collected',
+  },
+  loading: {
+    title: 'Loading Tarkov Tracker',
+    title_error: 'Loading Issue',
+    subtitle: 'Downloading required game data...',
+    subtitle_error: 'Some data failed to load',
+    tasks_maps_traders: 'Tasks, Maps & Traders',
+    hideout_stations: 'Hideout Stations',
+    prestige_data: 'Prestige Data',
+    game_editions: 'Game Editions',
+    first_load_note: 'This may take a moment on first load. Data will be cached for future visits.',
+    partial_data_note: 'The app can still work with partial data. You can retry or continue anyway.',
+    retry: 'Retry',
+    continue: 'Continue Anyway',
+  },
+  holiday: {
+    enable: 'Enable holiday effects',
+    disable: 'Disable holiday effects',
   },
   menu: {
     language: 'Language',
@@ -178,7 +209,7 @@
         completebutton: 'Complete',
         unlockbutton: 'Unlock',
         incompletebutton: 'Incomplete',
-        availablebutton: 'Mark Available',
+        availablebutton: 'Mark as Available',
         statuscomplete: 'Marked {name} as complete',
         statusuncomplete: 'Marked {name} as uncompleted',
         statusavailable: 'Marked all prerequisites for {name} as complete',
@@ -207,6 +238,7 @@
         unlocksPurchase: 'Unlocks purchase',
         traderRep: '+{standing} {trader}',
         skillReward: '+{level} {skill}',
+        min_level_required: 'Minimum level required to access task',
       },
     },
     traders: {
@@ -270,6 +302,18 @@
         hideout: 'Hideout',
       },
       neededby: 'Needed by: {users}',
+      collect: 'Collect',
+      uncollect: 'Uncollect',
+      collected: 'Collected',
+      mark_as_collected: 'Mark as collected',
+      decrease_count: 'Decrease count',
+      increase_count: 'Increase count',
+      click_to_enter_value: 'Click to enter value',
+      mark_as_incomplete: 'Mark as incomplete',
+      mark_as_complete_100: 'Mark as 100% complete',
+      fir_required: 'Found in Raid required',
+      lvl_required: 'Lvl {level}',
+      locked_before: '{count} before',
       options: {
         title: 'Needed Items Options',
         close: 'Close',
@@ -584,9 +628,14 @@
       set_total_xp: 'Set Total XP',
       manual_hint: 'Enter your actual total XP to adjust the offset automatically.',
       reset_offset: 'Reset XP Offset',
+      copy_account_id: 'Copy Account ID',
     },
     danger_zone: {
       title: 'Danger Zone',
+    },
+    skills: {
+      required_for: 'Required for: {tasks}',
+      required_levels: 'Required levels: {levels}',
     },
   },
   generic: {
