--- a/app/locales/es.json5
+++ b/app/locales/es.json5
@@ -6,9 +6,40 @@
     overflow_menu: {
       language: 'Idioma',
     },
+    toggle_drawer: 'Alternar menú lateral',
+    loading_data: 'Cargando datos de Tarkov',
+    error_loading: 'Error al cargar datos de Tarkov',
+    themes: {
+      system: 'Cambiar al tema del sistema',
+      light: 'Cambiar al modo claro',
+      dark: 'Cambiar al modo oscuro',
+    },
   },
   common: {
     refreshbutton: 'Intentar de nuevo',
+    hide: 'Ocultar',
+    show: 'Mostrar',
+    copied: '¡Copiado!',
+    copy: 'Copiar',
+    toggle_collected: 'Alternar recolectado',
+  },
+  loading: {
+    title: 'Cargando Tarkov Tracker',
+    title_error: 'Problema de carga',
+    subtitle: 'Descargando datos requeridos del juego...',
+    subtitle_error: 'Algunos datos no se pudieron cargar',
+    tasks_maps_traders: 'Misiones, Mapas y Comerciantes',
+    hideout_stations: 'Zonas del Escondite',
+    prestige_data: 'Datos de Prestigio',
+    game_editions: 'Ediciones del Juego',
+    first_load_note: 'Esto puede tomar un momento en la primera carga. Los datos se guardarán en caché para futuras visitas.',
+    partial_data_note: 'La aplicación aún puede funcionar con datos parciales. Puedes reintentar o continuar de todos modos.',
+    retry: 'Reintentar',
+    continue: 'Continuar de todos modos',
+  },
+  holiday: {
+    enable: 'Activar efectos festivos',
+    disable: 'Desactivar efectos festivos',
   },
   menu: {
     language: 'Idioma',
@@ -114,19 +145,21 @@
         lockedbefore: 'Misiones antes: {count}',
         lockedbehind: 'Misiones después: {count}',
         completebutton: 'Completar',
+        unlockbutton: 'Desbloquear',
+        incompletebutton: 'Incompleto',
         availablebutton: 'Marcar como disponible',
-        uncompletebutton: 'Marcar como no completado',
         statuscomplete: 'Marcado {name} como completo',
-        statusuncomplete: 'Marcado {name} como no completado',
+        statusuncomplete: 'Marcado {name} como incompleto',
         statusavailable: 'Marcados todos los requisitos previos para {name} como completados',
         undo: 'Deshacer',
         undocomplete: 'Deshecha la finalización de {name}',
-        undouncomplete: 'Deshecha la marcación de no completado de {name}',
+        undouncomplete: 'Deshecha la marcación de incompleto de {name}',
         nonkappa: 'No se requiere Kappa',
         keysneeded: '{keys} necesaria en {map} | {keys} necesarias en {map}',
         objectiveshidden: '{count} objetivos no están en este mapa ({uncompleted} sin completar)',
         alternatives: 'Misiones alternativas',
         alternativefailed: 'Las misiones alternativas también se reiniciarán',
+        min_level_required: 'Nivel mínimo requerido para acceder a la misión',
       },
     },
     traders: {
@@ -187,6 +220,18 @@
         tasks: 'Misiones',
         hideout: 'Escondite',
       },
+      collect: 'Recolectar',
+      uncollect: 'Deshacer recolección',
+      collected: 'Recolectado',
+      mark_as_collected: 'Marcar como recolectado',
+      decrease_count: 'Disminuir conteo',
+      increase_count: 'Aumentar conteo',
+      click_to_enter_value: 'Haz clic para ingresar valor',
+      mark_as_incomplete: 'Marcar como incompleto',
+      mark_as_complete_100: 'Marcar como 100% completado',
+      fir_required: 'Encontrado en incursión requerido',
+      lvl_required: 'Nv {level}',
+      locked_before: '{count} antes',
       options: {
         title: 'Opciones de Objetos Necesarios',
         close: 'Cerrar',
@@ -480,9 +525,14 @@
       reset_cancel: 'Cancelar',
       reset_confirm: 'Restablecer',
       reset_hint: 'Restablece tu progreso para modos de juego específicos o todos los datos.',
+      copy_account_id: 'Copiar ID de cuenta',
     },
     danger_zone: {
       title: 'Zona de peligro',
+    },
+    skills: {
+      required_for: 'Requerido para: {tasks}',
+      required_levels: 'Niveles requeridos: {levels}',
     },
   },
   generic: {
