--- a/app/locales/fr.json5
+++ b/app/locales/fr.json5
@@ -5,9 +5,40 @@
     overflow_menu: {
       language: 'Langue',
     },
+    toggle_drawer: 'Basculer le menu latéral',
+    loading_data: 'Chargement des données de Tarkov',
+    error_loading: 'Erreur lors du chargement des données de Tarkov',
+    themes: {
+      system: 'Passer au thème système',
+      light: 'Passer au mode clair',
+      dark: 'Passer au mode sombre',
+    },
   },
   common: {
     refreshbutton: 'Actualiser',
+    hide: 'Cacher',
+    show: 'Afficher',
+    copied: 'Copié !',
+    copy: 'Copier',
+    toggle_collected: 'Basculer collecté',
+  },
+  loading: {
+    title: 'Chargement de Tarkov Tracker',
+    title_error: 'Problème de chargement',
+    subtitle: 'Téléchargement des données requises...',
+    subtitle_error: "Certaines données n'ont pas pu être chargées",
+    tasks_maps_traders: 'Quêtes, Cartes & Marchands',
+    hideout_stations: 'Zones de la Planque',
+    prestige_data: 'Données de Prestige',
+    game_editions: 'Éditions du Jeu',
+    first_load_note: 'Cela peut prendre un moment lors du premier chargement. Les données seront mises en cache pour les visites futures.',
+    partial_data_note: "L'application peut toujours fonctionner avec des données partielles. Vous pouvez réessayer ou continuer quand même.",
+    retry: 'Réessayer',
+    continue: 'Continuer quand même',
+  },
+  holiday: {
+    enable: 'Activer les effets de fête',
+    disable: 'Désactiver les effets de fête',
   },
   menu: {
     language: 'Langue',
@@ -136,20 +167,22 @@
         lockedbefore: 'Quêtes avant : {count}',
         lockedbehind: 'Quêtes après : {count}',
         completebutton: 'Terminer',
+        unlockbutton: 'Débloquer',
+        incompletebutton: 'Incomplet',
         availablebutton: 'Disponible',
-        uncompletebutton: 'Annuler',
         statuscomplete: 'Marquer {name} comme terminé',
-        statusuncomplete: 'Marquer {name} comme non terminé',
+        statusuncomplete: 'Marquer {name} comme incomplet',
         statusavailable: 'Marquer tous les pre-requis de {name} comme terminés',
         undo: 'Annuler',
         undocomplete: 'Annulation de la finalisation de {name}',
-        undouncomplete: 'Annulation du marquage de {name} comme non terminé',
+        undouncomplete: 'Annulation du marquage de {name} comme incomplet',
         nonkappa: 'Non requis pour la Kappa',
         keysneeded: '{keys} requis sur {map} | Une des {keys} requis sur {map}',
         objectiveshidden: '{count} objectifs non présent sur la carte ({uncompleted} non terminés)',
         alternatives: 'Quêtes alternatives',
         alternativefailed: 'Les quêtes alternatives seront également réniitialisées',
         differentfaction: "Cette quête n'est pas disponible pour votre faction",
+        min_level_required: 'Niveau minimum requis pour accéder à la quête',
       },
     },
     traders: {
@@ -210,6 +243,18 @@
         tasks: 'Quêtes',
         hideout: 'Planque',
       },
+      collect: 'Collecter',
+      uncollect: 'Annuler la collecte',
+      collected: 'Collecté',
+      mark_as_collected: 'Marquer comme collecté',
+      decrease_count: 'Diminuer le compte',
+      increase_count: 'Augmenter le compte',
+      click_to_enter_value: 'Cliquer pour entrer une valeur',
+      mark_as_incomplete: 'Marcar como incomplet',
+      mark_as_complete_100: 'Marquer comme complété à 100%',
+      fir_required: 'Trouvé en raid requis',
+      lvl_required: 'Nv {level}',
+      locked_before: '{count} avant',
       neededby: 'Requis par: {users}',
       options: {
         title: 'Options',
@@ -522,9 +567,14 @@
       reset_cancel: 'Annuler',
       reset_confirm: 'Réinitialiser',
       reset_hint: 'Réinitialisez votre progression pour des modes de jeu spécifiques ou toutes les données.',
+      copy_account_id: "Copiar l'ID du compte",
     },
     danger_zone: {
       title: 'Zone de danger',
+    },
+    skills: {
+      required_for: 'Requis pour : {tasks}',
+      required_levels: 'Niveaux requis : {levels}',
     },
   },
   generic: {
