--- a/app/locales/ru.json5
+++ b/app/locales/ru.json5
@@ -5,9 +5,40 @@
     overflow_menu: {
       language: 'Язык',
     },
+    toggle_drawer: 'Переключить боковую панель',
+    loading_data: 'Загрузка данных Таркова',
+    error_loading: 'Ошибка при загрузке данных Таркова',
+    themes: {
+      system: 'Переключить на системную тему',
+      light: 'Переключить на светлую тему',
+      dark: 'Переключить на темную тему',
+    },
   },
   common: {
     refreshbutton: 'Попробовать снова',
+    hide: 'Скрыть',
+    show: 'Показать',
+    copied: 'Скопировано!',
+    copy: 'Копировать',
+    toggle_collected: 'Переключить собранное',
+  },
+  loading: {
+    title: 'Загрузка Tarkov Tracker',
+    title_error: 'Проблема при загрузке',
+    subtitle: 'Загрузка необходимых игровых данных...',
+    subtitle_error: 'Некоторые данные не удалось загрузить',
+    tasks_maps_traders: 'Задания, Карты и Торговцы',
+    hideout_stations: 'Зоны Убежища',
+    prestige_data: 'Данные Престижа',
+    game_editions: 'Издания Игры',
+    first_load_note: 'Это может занять некоторое время при первой загрузке. Данные будут кешированы для будущих посещений.',
+    partial_data_note: 'Приложение может работать с частичными данными. Вы можете попробовать снова или продолжить в любом случае.',
+    retry: 'Повторить',
+    continue: 'Продолжить в любом случае',
+  },
+  holiday: {
+    enable: 'Включить праздничные эффекты',
+    disable: 'Выключить праздничные эффекты',
   },
   menu: {
     language: 'Язык',
@@ -136,8 +167,9 @@
         lockedbefore: 'Заданий до: {count}',
         lockedbehind: 'Заданий после: {count}',
         completebutton: 'Завершено',
+        unlockbutton: 'Разблокировать',
+        incompletebutton: 'Не завершено',
         availablebutton: 'Отметить Доступным',
-        uncompletebutton: 'Отметить Не Завершенным',
         statuscomplete: 'Отмеченно {name} как завершено',
         statusuncomplete: 'Отмечено {name} как не завершено',
         statusavailable: 'Все предварительные условия для {name} отмечены как завершенные',
@@ -149,6 +181,7 @@
         objectiveshidden: '{count} целей не на этой карте ({uncompleted} не завершено)',
         alternatives: 'Альтернативные задания',
         alternativefailed: 'Альтернативные задания также будут сброшены',
+        min_level_required: 'Минимальный уровень для доступа к заданию',
       },
     },
     traders: {
@@ -209,6 +242,18 @@
         tasks: 'Задания',
         hideout: 'Убежище',
       },
+      collect: 'Собрать',
+      uncollect: 'Отменить сбор',
+      collected: 'Собрано',
+      mark_as_collected: 'Отметить как собранное',
+      decrease_count: 'Уменьшить количество',
+      increase_count: 'Увеличить количество',
+      click_to_enter_value: 'Нажмите, чтобы ввести значение',
+      mark_as_incomplete: 'Отметить как не завершенное',
+      mark_as_complete_100: 'Отметить как завершенное на 100%',
+      fir_required: 'Требуется найти в рейде',
+      lvl_required: 'Ур {level}',
+      locked_before: '{count} до',
       options: {
         title: 'Настройки Необходимых Предметов',
         close: 'Закрыть',
@@ -490,9 +535,14 @@
       reset_cancel: 'Отмена',
       reset_confirm: 'Сбросить',
       reset_hint: 'Сбросьте свой прогресс для определенных игровых режимов или все данные.',
+      copy_account_id: 'Копировать ID аккаунта',
     },
     danger_zone: {
       title: 'Опасная зона',
+    },
+    skills: {
+      required_for: 'Требуется для: {tasks}',
+      required_levels: 'Требуемые уровни: {levels}',
     },
   },
   generic: {
