--- a/app/locales/uk.json5
+++ b/app/locales/uk.json5
@@ -5,9 +5,40 @@
     overflow_menu: {
       language: 'Мова',
     },
+    toggle_drawer: 'Перемкнути бічну панель',
+    loading_data: 'Завантаження даних Таркова',
+    error_loading: 'Помилка при завантаженні даних Таркова',
+    themes: {
+      system: 'Перемкнути на системну тему',
+      light: 'Перемкнути на світлу тему',
+      dark: 'Перемкнути на темну тему',
+    },
   },
   common: {
     refreshbutton: 'Спробувати знову',
+    hide: 'Приховати',
+    show: 'Показати',
+    copied: 'Скопійовано!',
+    copy: 'Копіювати',
+    toggle_collected: 'Перемкнути зібране',
+  },
+  loading: {
+    title: 'Завантаження Tarkov Tracker',
+    title_error: 'Проблема при завантаженні',
+    subtitle: 'Завантаження необхідних ігрових даних...',
+    subtitle_error: 'Деякі дані не вдалося завантажити',
+    tasks_maps_traders: 'Завдання, Карти та Торговці',
+    hideout_stations: 'Зони Притулку',
+    prestige_data: 'Дані Престижу',
+    game_editions: 'Видання Гри',
+    first_load_note: 'Це може зайняти деякий час при першому завантаженні. Дані будуть кешовані для майбутніх відвідувань.',
+    partial_data_note: 'Програма може працювати з частковими даними. Ви можете спробувати ще раз або продовжити в будь-якому випадку.',
+    retry: 'Повторити',
+    continue: 'Продовжити в будь-якому випадку',
+  },
+  holiday: {
+    enable: 'Увімкнути святкові ефекти',
+    disable: 'Вимкнути святкові ефекти',
   },
   menu: {
     language: 'Мова',
@@ -136,8 +167,9 @@
         lockedbefore: 'Завдань до: {count}',
         lockedbehind: 'Завдань після: {count}',
         completebutton: 'Завершено',
+        unlockbutton: 'Розблокувати',
+        incompletebutton: 'Не завершено',
         availablebutton: 'Відзначити Доступним',
-        uncompletebutton: 'Відзначити Незавершене',
         statuscomplete: 'Відзначено {name} як завершено',
         statusuncomplete: 'Відзначено {name} як незавершене',
         statusavailable: 'Усі попередні умови для {name} позначені як завершені',
@@ -149,6 +181,7 @@
         objectiveshidden: '{count} цілей не на цій карті ({uncompleted} не завершено)',
         alternatives: 'Альтернативні завдання',
         alternativefailed: 'Альтернативні завдання також будуть перезавантаженні',
+        min_level_required: 'Мінімальний рівень для доступу до завдання',
       },
     },
     traders: {
@@ -209,6 +242,18 @@
         tasks: 'Завдання',
         hideout: 'Притулок',
       },
+      collect: 'Зібрати',
+      uncollect: 'Скасувати збір',
+      collected: 'Зібрано',
+      mark_as_collected: 'Відзначити як зібране',
+      decrease_count: 'Зменшити кількість',
+      increase_count: 'Збільшити кількість',
+      click_to_enter_value: 'Натисніть, щоб ввести значення',
+      mark_as_incomplete: 'Відзначити як не завершене',
+      mark_as_complete_100: 'Відзначити як завершене на 100%',
+      fir_required: 'Потрібно знайти в рейді',
+      lvl_required: 'Рів {level}',
+      locked_before: '{count} до',
       options: {
         title: 'Налаштування необхідних предметів',
         close: 'Закрити',
@@ -502,9 +547,14 @@
       reset_cancel: 'Скасувати',
       reset_confirm: 'Скинути',
       reset_hint: 'Скиньте свій прогрес для певних ігрових режимів або всі дані.',
+      copy_account_id: 'Копіювати ID акаунту',
     },
     danger_zone: {
       title: 'Небезпечна зона',
+    },
+    skills: {
+      required_for: 'Потрібно для: {tasks}',
+      required_levels: 'Потрібні рівні: {levels}',
     },
   },
   generic: {
