fix(tasks): restore v-tooltip and styles overwritten by merge
This restores changes from a510072 that were unintentionally squashed/reverted during the merge of main into feat/light-mode (923968b).%0A%0A- Reverts AppTooltip back to v-tooltip for badges%0A- Restores specific badge stylings (neutral colors, !bg-gray-400)%0A- Restores 'Available' button text

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -257,7 +257,7 @@
         completebutton: 'Complete',
         unlockbutton: 'Unlock',
         incompletebutton: 'Incomplete',
-        availablebutton: 'Mark as Available',
+        availablebutton: 'Available',
         uncompletebutton: 'Mark Uncompleted',
         resetfailed: 'Reset Failed',
         statuscomplete: 'Marked {name} as complete',
