fix: address miscellaneous UI, logic, and localization issues
- Update .hover-effect active state with valid opacity and brightness filter
- Remove duplicate class in FilterPill.vue
- Improve global mouseup handling in useLeafletMap.ts for reliable drag release
- Update MapMarker.vue to use Tailwind v4 CSS variable syntax
- Rename shadowing computed property in ItemIndicators.vue
- Refactor TaskObjectiveItemGroup.vue to use GameItem's new item API
- Remove obsolete 'uncompletebutton' translation key across all locales
- Improve Spanish translations for task dependencies and level requirements
- Add missing watch import in default.vue layout
- Add sensible default icon color to GenericCard.vue and simplify TeamOptions.vue
- Remove duplicate/incorrect getLocaleOverride getter in usePreferences.ts

--- a/app/locales/es.json5
+++ b/app/locales/es.json5
@@ -143,13 +143,12 @@
       questcard: {
         level: 'Nivel requerido: {count}',
         wiki: 'Wiki',
-        lockedbefore: 'Tareas antes: {count}',
-        lockedbehind: 'Tareas después: {count}',
+        lockedbefore: 'Tareas previas: {count}',
+        lockedbehind: 'Tareas posteriores: {count}',
         completebutton: 'Completar',
         unlockbutton: 'Desbloquear',
         incompletebutton: 'Incompleto',
         availablebutton: 'Marcar como disponible',
-        uncompletebutton: 'Marcar como no completado',
         markfailed: 'Marcar como fallida',
         resetfailed: 'Restablecer fallida',
         statuscomplete: 'Marcado {name} como completo',
@@ -246,8 +245,8 @@
       mark_as_complete_100: 'Marcar como 100% completado',
       fir_required: 'Encontrado en incursión requerido',
       craftable: 'Fabricable',
-      lvl_required: 'Nv {level}',
-      locked_before: '{count} antes',
+      lvl_required: 'Nivel {level}',
+      locked_before: '{count} anteriores',
       options: {
         title: 'Opciones de Objetos Necesarios',
         close: 'Cerrar',
