--- a/app/locales/fr.json5
+++ b/app/locales/fr.json5
@@ -170,9 +170,8 @@
         completebutton: 'Terminer',
         unlockbutton: 'Débloquer',
         incompletebutton: 'Incomplet',
-        availablebutton: 'Disponible',
-        uncompletebutton: 'Annuler',
-        markfailed: 'Mark Failed',
+        availablebutton: 'Tâche disponible',
+        markfailed: 'Echec',
         resetfailed: 'Reset Failed',
         statuscomplete: 'Marquer {name} comme terminé',
         statusuncomplete: 'Marquer {name} comme non terminé',
