--- a/app/locales/ru.json5
+++ b/app/locales/ru.json5
@@ -171,8 +171,7 @@
         unlockbutton: 'Разблокировать',
         incompletebutton: 'Не завершено',
         availablebutton: 'Отметить Доступным',
-        uncompletebutton: 'Отметить Не Завершенным',
-        markfailed: 'Mark Failed',
+        markfailed: 'Отметить Проваленным',
         resetfailed: 'Reset Failed',
         statuscomplete: 'Отмеченно {name} как завершено',
         statusuncomplete: 'Отмечено {name} как не завершено',
