feat: implement comprehensive PR feedback fixes
- Core: Fix memory leaks, improve map reactivity, and robustify data loading

- Components: Optimize rendering, fix badge logic, and clean up usage

- Styling: Fix color-mix fallbacks and standardize gradients

- Localization: Add missing keys and complete translations

- Safety: Fix potential runtime errors and improve accessibility

- Utils: Update filter configs and fix object mapping logic

--- a/app/locales/es.json5
+++ b/app/locales/es.json5
@@ -137,6 +137,50 @@
         hide_non_kappa_tasks: 'Ocultar tareas no-Kappa',
         show_non_kappa_tasks: 'Mostrar tareas no-Kappa',
       },
+      settings: {
+        title: 'Task Settings',
+        description: 'Configure task filters and appearance',
+        tabs: {
+          filters: 'Task Filters',
+          appearance: 'Appearance',
+          advanced: 'Advanced',
+        },
+        filters: {
+          hint: 'Control which tasks appear.',
+          showNonSpecialTasks: 'Show tasks without Lightkeeper or Kappa requirement',
+          showNonSpecialTasksTooltip: 'Show regular tasks that do not require Kappa or Lightkeeper',
+          showKappaTasks: 'Show "Kappa Required" tasks',
+          showKappaTasksTooltip: 'Show tasks required for Kappa container',
+          showLightkeeperTasks: 'Show Lightkeeper Tasks and Lightkeeper-required Tasks',
+          showLightkeeperTasksTooltip: 'Show tasks from Lightkeeper trader and tasks required for Lightkeeper',
+        },
+        appearance: {
+          hint: 'Tune how task cards look.',
+          showRequiredLabels: 'Show "Required" labels',
+          showRequiredLabelsTooltip: 'Show labels indicating Kappa or Lightkeeper requirements',
+          showNotRequiredLabels: 'Show "Not Required" labels',
+          showNotRequiredLabelsTooltip: 'Show Non-Kappa labels on tasks not required for Kappa',
+          showExperienceRewards: 'Show experience rewards',
+          showExperienceRewardsTooltip: 'Display experience points rewarded for completing tasks',
+          showTaskIds: 'Show task IDs',
+          showTaskIdsTooltip: 'Display internal task ID at the bottom of each task card',
+          showNextQuests: 'Show next tasks',
+          showNextQuestsTooltip: 'Display tasks that will be unlocked after completing this task',
+          showPreviousQuests: 'Show previous tasks',
+          showPreviousQuestsTooltip: 'Display tasks that must be completed before this task',
+        },
+        advanced: {
+          hint: 'Use with care. Manual overrides can make debugging harder.',
+          manualFail: 'Enable manual task fail actions',
+          manualFailTooltip: 'Allows marking tasks as failed from the overflow menu (use for recovery only)',
+          repairFailed: 'Repair failed tasks',
+          repairFailedTooltip: 'Clears failed flags that no longer match fail conditions',
+          repairFailedHint: 'Clears failed flags that are not supported by current fail conditions.',
+          repairFailedCount: 'Failed tasks detected: {count}',
+          repairFailedConfirm: 'Repair failed tasks by clearing failed flags that are not supported by current fail conditions?',
+          repairFailedDone: 'Cleared failed status for {count} tasks.',
+        },
+      },
       notasksfound: 'No se han encontrado tareas. Prueba a cambiar los filtros o actualizar el nivel.',
       showing_all_sources: 'Mostrar todas las fuentes',
       loading: 'Cargando tareas',
