wip: standardize disabled states and XP card layout

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -694,8 +694,13 @@
       manual_level_warning: 'Manual level mode is active. This allows you to set your level independently of your automatically calculated level, which can be useful if your in-game level differs due to Arena, raids, or other XP sources not tracked here.',
       current_level: 'Current Level',
       breakdown: 'XP Breakdown',
-      set_total_xp: 'Set Total XP',
+      task_xp: 'Task XP',
+      manual_offset: 'Manual Offset',
+      total_xp: 'Total XP',
+      unsaved_changes: 'Unsaved Changes',
+      sync_description: 'Set your in-game Total XP to automatically update the offset.',
       manual_hint: 'Enter your actual total XP to adjust the offset automatically.',
+      reset: 'Reset',
       reset_offset: 'Reset XP Offset',
       copy_account_id: 'Copy Account ID',
     },
