feat: localize reset confirmations

--- a/app/locales/en.json5
+++ b/app/locales/en.json5
@@ -661,6 +661,8 @@
     },
     danger_zone: {
       title: 'Danger Zone',
+      confirm_delete_instruction: 'Type {word} to confirm:',
+      confirm_word: 'DELETE',
     },
   },
   generic: {
